--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,53 @@
 !test.png
 *.POSCAR
 defects_se.egg-info
+
+__pycache__/
+
+# Distribution / packaging
+bin/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+.tox/
+.coverage
+.cache
+nosetests.xml
+coverage.xml
+
+
+# Django stuff:
+*.log
+*.pot
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+**/.DS_Store
+**/**/.DS_Store
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Sphinx documentation
+docs/_build/
